@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -26,9 +26,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import javax.jws.WebService;
+import jakarta.jws.WebService;
 import javax.xml.namespace.QName;
-import javax.xml.ws.WebServiceFeature;
+import jakarta.xml.ws.WebServiceFeature;
 
 import org.eclipse.persistence.sdo.helper.SDOHelperContext;
 import org.eclipse.persistence.sdo.helper.SDOXSDHelper;
@@ -69,6 +69,7 @@ import com.sun.xml.ws.util.xml.XmlUtil;
 import com.sun.xml.ws.wsdl.parser.RuntimeWSDLParser;
 
 import commonj.sdo.helper.HelperContext;
+import org.junit.Assert;
 
 /**
  * WsDatabindingTestBase
@@ -142,7 +143,7 @@ abstract public class SDODatabindingTestBase extends TestCase {
             srv = server;
             serviceBeanType = endpoint;
             try {
-                serviceBeanInstance = serviceBeanType.newInstance();
+                serviceBeanInstance = serviceBeanType.getConstructor().newInstance();
             } catch (Exception e) {
                 e.printStackTrace();
             } 
@@ -213,23 +214,23 @@ abstract public class SDODatabindingTestBase extends TestCase {
 
     
     static public void assertEqualList(List<?> list1, List<?> list2) {
-        assertTrue(list1.size() == list2.size());
+        Assert.assertEquals(list1.size(), list2.size());
         for (int i = 0; i < list1.size(); i++) {
-            assertEquals(list1.get(i), list2.get(i));
+            Assert.assertEquals(list1.get(i), list2.get(i));
         }        
     }
 
     static public void assertEqualCollection(Collection<?> c1, Collection<?> c2) {
-        assertTrue(c1.size() == c2.size());
+        Assert.assertEquals(c1.size(), c2.size());
         for (Iterator i = c1.iterator(); i.hasNext();) {
-            assertTrue(c2.contains(i.next()));
+            Assert.assertTrue(c2.contains(i.next()));
         }        
     }
     
     static public void assertEqualArray(Object a1, Object a2) {
-        assertTrue(Array.getLength(a1) == Array.getLength(a2));
+        Assert.assertEquals(Array.getLength(a1), Array.getLength(a2));
         for (int i = 0; i < Array.getLength(a1); i++) {
-            assertEquals(Array.get(a1, i), Array.get(a2, i));
+            Assert.assertEquals(Array.get(a1, i), Array.get(a2, i));
         }        
     }   
 
@@ -274,7 +275,7 @@ abstract public class SDODatabindingTestBase extends TestCase {
             public <A extends Annotation> A getAnnotation(final Class<A> annType, final Class<?> cls) {
                 if (WebService.class.equals(annType)) {
                     final WebService ws = cls.getAnnotation(WebService.class);
-                    return (A)new javax.jws.WebService() {
+                    return (A)new jakarta.jws.WebService() {
                         public Class<? extends Annotation> annotationType() {
                             return WebService.class;
                         }
