@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -18,9 +18,9 @@ import com.sun.xml.ws.resources.WsservletMessages;
 import com.sun.xml.ws.server.ServerRtException;
 import com.sun.xml.ws.server.SingletonResolver;
 
-import javax.xml.ws.Provider;
-import javax.xml.ws.WebServiceContext;
-import javax.xml.ws.WebServiceException;
+import jakarta.xml.ws.Provider;
+import jakarta.xml.ws.WebServiceContext;
+import jakarta.xml.ws.WebServiceException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -131,7 +131,7 @@ public abstract class InstanceResolver<T> {
         assert singleton!=null;
         InstanceResolver ir = createFromInstanceResolverAnnotation(singleton.getClass());
         if(ir==null)
-            ir = new SingletonResolver<T>(singleton);
+            ir = new SingletonResolver<>(singleton);
         return ir;
     }
 
@@ -151,7 +151,7 @@ public abstract class InstanceResolver<T> {
     public static <T> InstanceResolver<T> createDefault(@NotNull Class<T> clazz) {
         InstanceResolver<T> ir = createFromInstanceResolverAnnotation(clazz);
         if(ir==null)
-            ir = new SingletonResolver<T>(createNewInstance(clazz));
+            ir = new SingletonResolver<>(createNewInstance(clazz));
         return ir;
     }
 
@@ -166,16 +166,7 @@ public abstract class InstanceResolver<T> {
             Class<? extends InstanceResolver> ir = ira.value();
             try {
                 return ir.getConstructor(Class.class).newInstance(clazz);
-            } catch (InstantiationException e) {
-                throw new WebServiceException(ServerMessages.FAILED_TO_INSTANTIATE_INSTANCE_RESOLVER(
-                    ir.getName(),a.annotationType(),clazz.getName()));
-            } catch (IllegalAccessException e) {
-                throw new WebServiceException(ServerMessages.FAILED_TO_INSTANTIATE_INSTANCE_RESOLVER(
-                    ir.getName(),a.annotationType(),clazz.getName()));
-            } catch (InvocationTargetException e) {
-                throw new WebServiceException(ServerMessages.FAILED_TO_INSTANTIATE_INSTANCE_RESOLVER(
-                    ir.getName(),a.annotationType(),clazz.getName()));
-            } catch (NoSuchMethodException e) {
+            } catch (ReflectiveOperationException e) {
                 throw new WebServiceException(ServerMessages.FAILED_TO_INSTANTIATE_INSTANCE_RESOLVER(
                     ir.getName(),a.annotationType(),clazz.getName()));
             }
@@ -186,12 +177,8 @@ public abstract class InstanceResolver<T> {
 
     protected static <T> T createNewInstance(Class<T> cl) {
         try {
-            return cl.newInstance();
-        } catch (InstantiationException e) {
-            logger.log(Level.SEVERE, e.getMessage(), e);
-            throw new ServerRtException(
-                WsservletMessages.ERROR_IMPLEMENTOR_FACTORY_NEW_INSTANCE_FAILED(cl));
-        } catch (IllegalAccessException e) {
+            return cl.getConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             logger.log(Level.SEVERE, e.getMessage(), e);
             throw new ServerRtException(
                 WsservletMessages.ERROR_IMPLEMENTOR_FACTORY_NEW_INSTANCE_FAILED(cl));
@@ -234,7 +221,7 @@ public abstract class InstanceResolver<T> {
             }
 
             public String toString() {
-                return "Default Invoker over "+InstanceResolver.this.toString();
+                return "Default Invoker over "+ InstanceResolver.this;
             }
         };
     }
