@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -24,17 +24,17 @@ import com.sun.xml.ws.api.model.wsdl.WSDLPort;
 import com.sun.xml.ws.api.model.wsdl.WSDLFeaturedObject;
 import com.sun.xml.ws.model.RuntimeModelerException;
 import com.sun.xml.ws.resources.ModelerMessages;
-import com.sun.xml.bind.util.Which;
+import org.glassfish.jaxb.core.util.Which;
 
-import javax.xml.ws.RespectBinding;
-import javax.xml.ws.RespectBindingFeature;
-import javax.xml.ws.WebServiceException;
-import javax.xml.ws.WebServiceFeature;
-import javax.xml.ws.soap.Addressing;
-import javax.xml.ws.soap.AddressingFeature;
-import javax.xml.ws.soap.MTOM;
-import javax.xml.ws.soap.MTOMFeature;
-import javax.xml.ws.spi.WebServiceFeatureAnnotation;
+import jakarta.xml.ws.RespectBinding;
+import jakarta.xml.ws.RespectBindingFeature;
+import jakarta.xml.ws.WebServiceException;
+import jakarta.xml.ws.WebServiceFeature;
+import jakarta.xml.ws.soap.Addressing;
+import jakarta.xml.ws.soap.AddressingFeature;
+import jakarta.xml.ws.soap.MTOM;
+import jakarta.xml.ws.soap.MTOMFeature;
+import jakarta.xml.ws.spi.WebServiceFeatureAnnotation;
 
 import com.oracle.webservices.api.EnvelopeStyleFeature;
 
@@ -62,7 +62,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         return w;
     }
 
-    private Map<Class<? extends WebServiceFeature>, WebServiceFeature> wsfeatures = new HashMap<Class<? extends WebServiceFeature>, WebServiceFeature>();
+    private Map<Class<? extends WebServiceFeature>, WebServiceFeature> wsfeatures = new HashMap<>();
     private boolean isValidating = false;
 
     public WebServiceFeatureList() {
@@ -99,11 +99,9 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         if (fva != null) {
             Class<? extends FeatureListValidator> beanClass = fva.bean();
             try {
-                FeatureListValidator validator = beanClass.newInstance();
+                FeatureListValidator validator = beanClass.getConstructor().newInstance();
                 validator.validate(this);
-            } catch (InstantiationException e) {
-                throw new WebServiceException(e);
-            } catch (IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 throw new WebServiceException(e);
             }
         }
@@ -279,9 +277,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         } catch (final NoSuchMethodException e) {
             LOGGER.log(Level.INFO, "Unable to find builder method on webservice feature: " + beanClass.getName(), e);
             return null;
-        } catch (final IllegalAccessException e) {
-            throw new WebServiceException(e);
-        } catch (final InvocationTargetException e) {
+        } catch (final IllegalAccessException | InvocationTargetException e) {
             throw new WebServiceException(e);
         }
     }
@@ -307,12 +303,14 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         return false;
     }
 
+    @Override
     public Iterator<WebServiceFeature> iterator() {
         if (parent != null)
             return new MergedFeatures(parent.getFeatures());
         return wsfeatures.values().iterator();
     }
 
+    @Override
     public @NotNull
 	WebServiceFeature[] toArray() {
         if (parent != null)
@@ -320,6 +318,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         return wsfeatures.values().toArray(new WebServiceFeature[] {});
     }
 
+    @Override
     public boolean isEnabled(@NotNull Class<? extends WebServiceFeature> feature) {
         WebServiceFeature ftr = get(feature);
         return ftr != null && ftr.isEnabled();
@@ -330,6 +329,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         return ftr != null;
     }
 
+    @Override
     public @Nullable
 	<F extends WebServiceFeature> F get(@NotNull Class<F> featureType) {
         WebServiceFeature f = featureType.cast(wsfeatures.get(featureType));
@@ -370,7 +370,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
 
     /**
      * Sets MTOM feature, overriding any existing feature.  This is necessary for compatibility
-     * with the existing {@link SOAPBinding.setMTOMEnabled}.
+     * with the existing {@link jakarta.xml.ws.soap.SOAPBinding#setMTOMEnabled}.
      * @param b if MTOM will be enabled
      */
     void setMTOMEnabled(boolean b) {
@@ -399,6 +399,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
      *                          policy configuration) conflicts with feature setting in Deployed Service and
      *                          logs warning if there are any conflicts.
      */
+    @Override
     public void mergeFeatures(@NotNull Iterable<WebServiceFeature> features, boolean reportConflicts) {
         for (WebServiceFeature wsdlFtr : features) {
             if (get(wsdlFtr.getClass()) == null) {
@@ -412,6 +413,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
         }
     }
 
+    @Override
     public void mergeFeatures(WebServiceFeature[] features, boolean reportConflicts) {
         for (WebServiceFeature wsdlFtr : features) {
             if (get(wsdlFtr.getClass()) == null) {
@@ -460,9 +462,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
                         boolean required = (Boolean) m.invoke(wsdlFtr);
                         if (required)
                             add(wsdlFtr);
-                    } catch (IllegalAccessException e) {
-                        throw new WebServiceException(e);
-                    } catch (InvocationTargetException e) {
+                    } catch (IllegalAccessException | InvocationTargetException e) {
                         throw new WebServiceException(e);
                     }
                 } catch (NoSuchMethodException e) {
@@ -500,7 +500,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
      * A Union of this WebServiceFeatureList and the parent.
      */
     private final class MergedFeatures implements Iterator<WebServiceFeature> {
-        private final Stack<WebServiceFeature> features = new Stack<WebServiceFeature>();
+        private final Stack<WebServiceFeature> features = new Stack<>();
 
         public MergedFeatures(@NotNull WSFeatureList parent) {
 
@@ -515,10 +515,12 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
             }
         }
 
+        @Override
         public boolean hasNext() {
             return !features.empty();
         }
 
+        @Override
         public WebServiceFeature next() {
             if (!features.empty()) {
                 return features.pop();
@@ -526,6 +528,7 @@ public final class WebServiceFeatureList extends AbstractMap<Class<? extends Web
             throw new NoSuchElementException();
         }
 
+        @Override
         public void remove() {
             if (!features.empty()) {
                 features.pop();
