@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -19,9 +19,9 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.NoSuchElementException;
 
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.attachment.AttachmentMarshaller;
-import javax.xml.bind.attachment.AttachmentUnmarshaller;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.attachment.AttachmentMarshaller;
+import jakarta.xml.bind.attachment.AttachmentUnmarshaller;
 import javax.xml.namespace.NamespaceContext;
 import javax.xml.stream.XMLStreamReader;
 import javax.xml.stream.XMLStreamWriter;
@@ -111,7 +111,7 @@ public class RepeatedElementBridge<T> implements XMLBridge<T> {
         return delegate.supportOutputStream();
     }
     
-    static public interface CollectionHandler {
+    public interface CollectionHandler {
         int getSize(Object c);
         Iterator iterator(Object c);
         Object convert(List list);
@@ -125,7 +125,7 @@ public class RepeatedElementBridge<T> implements XMLBridge<T> {
         @Override
         public Object convert(List list) {
             try {
-                Object o = type.newInstance();
+                Object o = type.getConstructor().newInstance();
                 ((Collection)o).addAll(list);
                 return o;
             } catch (Exception e) {
