@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -16,8 +16,8 @@ import junit.framework.TestSuite;
 import testutil.ClientServerTestUtil;
 
 import javax.xml.namespace.QName;
-import javax.xml.ws.Service;
-import javax.xml.ws.Holder;
+import jakarta.xml.ws.Service;
+import jakarta.xml.ws.Holder;
 import java.util.List;
 
 /**
@@ -46,8 +46,8 @@ public class EchoClient extends TestCase {
 	  assertTrue(holder.value.equals("fred&john"));
         holder = new Holder<Integer>(33);
         stub.echoGenericInteger(holder);
-        assertTrue(holder.value.equals(new Integer(66)));
-        assertTrue(stub.echoGenericObject(new Integer(66)).equals(new Integer(66)));   
+        assertTrue(holder.value.equals(Integer.valueOf(66)));
+        assertTrue(stub.echoGenericObject(Integer.valueOf(66)).equals(Integer.valueOf(66)));   
         assertTrue(stub.echoGenericObject("bill").equals("bill"));   
     }
 
@@ -131,7 +131,7 @@ public class EchoClient extends TestCase {
 
         assertTrue(stub.echoInHeader(33, 44L) == 77L);
 
-        Holder<Long> longHolder = new Holder<Long>(new Long(44));
+        Holder<Long> longHolder = new Holder<Long>(Long.valueOf(44));
         assertTrue(stub.echoInOutHeader(33, longHolder) == 121L);
         assertTrue(longHolder.value == 88L);
 
