@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -11,10 +11,10 @@
 package fromwsdl.soap12.fault.server;
 
 import javax.xml.namespace.QName;
-import javax.xml.ws.ProtocolException;
-import javax.xml.ws.WebServiceException;
-import javax.xml.ws.soap.SOAPFaultException;
-import javax.xml.soap.*;
+import jakarta.xml.ws.ProtocolException;
+import jakarta.xml.ws.WebServiceException;
+import jakarta.xml.ws.soap.SOAPFaultException;
+import jakarta.xml.soap.*;
 import javax.xml.transform.OutputKeys;
 import javax.xml.transform.Transformer;
 import javax.xml.transform.TransformerFactory;
@@ -25,7 +25,7 @@ import java.util.Properties;
 
 import org.w3c.dom.*;
 
-@javax.jws.WebService(endpointInterface="fromwsdl.soap12.fault.server.Fault")
+@jakarta.jws.WebService(endpointInterface="fromwsdl.soap12.fault.server.Fault")
 public class FaultImpl
         implements Fault {
     public java.lang.String echo(java.lang.String type)
@@ -53,7 +53,7 @@ public class FaultImpl
             System.out.println("Throwing Fault2Exception");
             throw new Fault2Exception("Fault2 message", fault);        
         } else if (type.equals("Fault3")) {
-            Integer fault = new Integer("1");
+            Integer fault = Integer.valueOf("1");
             System.out.println("Throwing Fault3Exception");
             throw new Fault3Exception("Fault3 message", fault);
         } else if (type.equals("Fault4")) {
